defined all properties on components, defined required properties, implemented global exception handler for no such element exception, defined entities, implemented services & rest api
